Overflow fix

--- a/src/scss/components/ascii.scss
+++ b/src/scss/components/ascii.scss
@@ -1,5 +1,5 @@
 .ascii {
-  width: 47.666666vw;
+  width: 45vw;
   display: flex;
   color: $black;
   font-size: 0.66vw;
@@ -26,7 +26,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    font-size: 1.385vw;
+    font-size: 1.4vw;
     opacity: 0.5;
   }
 }
